--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rishav-chanda-portfolio",
+  "name": "prince-bhandari-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
